--- a/style.css
+++ b/style.css
@@ -1,1 +1,34 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #222;
+  color: #fff;
+  text-align: center;
+}
 
+h1 {
+  margin-top: 10px;
+}
+
+#game-container {
+  width: 800px;
+  height: 500px;
+  margin: 20px auto;
+  position: relative;
+  border: 3px solid #0f0;
+  background-image: url('floresta.jpg'); /* ou substitua por uma cor */
+  background-size: cover;
+  overflow: hidden;
+}
+
+#player {
+  width: 40px;
+  height: 40px;
+  background-color: yellow;
+  position: absolute;
+  top: 230px;
+  left: 380px;
+  border-radius: 5px;
+  transition: top 0.1s, left 0.1s;
+}
