--- a/style.css
+++ b/style.css
@@ -1,61 +1,51 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #111;
-  font-family: sans-serif;
-  color: white;
+  font-family: Arial, sans-serif;
   text-align: center;
+  background-color: #111;
+  color: white;
 }
 
-h1 {
-  margin-top: 10px;
+#game-wrapper {
+  width: 100%;
+  height: 600px;
+  overflow: auto;
+  border: 3px solid #0f0;
+  margin: 20px auto;
+  position: relative;
 }
 
 #game-container {
-  width: 800px;
-  height: 500px;
-  margin: 20px auto;
-  border: 3px solid #0f0;
-  background-image: url('https://ufla.br/images/noticias/2020/10_out/desmatadas-jpg.jpg');
-  background-size: cover;
+  width: 1600px; /* mapa maior */
+  height: 1200px;
   position: relative;
-  overflow: hidden;
+  background-image: url('https://images.unsplash.com/photo-1506765515384-028b60a970df?auto=format&fit=crop&w=1600&q=80');
+  background-size: cover;
+  background-position: center;
 }
 
-#player {
-  width: 40px;
-  height: 40px;
-  background-color: yellow;
+#player, .enemy, .item {
+  width: 50px;
+  height: 50px;
   position: absolute;
-  top: 230px;
-  left: 380px;
   z-index: 10;
-  border-radius: 5px;
 }
 
 .obstacle {
-  width: 50px;
-  height: 50px;
-  background-color: brown;
+  width: 60px;
+  height: 60px;
+  background-color: #654321;
   position: absolute;
   z-index: 5;
-  border-radius: 8px;
-}
-
-.item {
-  width: 30px;
-  height: 30px;
-  background-color: gold;
-  position: absolute;
-  border-radius: 50%;
-  z-index: 5;
+  border-radius: 10px;
+  border: 2px solid #333;
 }
 
 .enemy {
-  width: 40px;
-  height: 40px;
-  background-color: red;
-  position: absolute;
-  border-radius: 5px;
-  z-index: 5;
+  z-index: 9;
+}
+
+.item {
+  z-index: 8;
 }
